--- a/deweb/sty.css
+++ b/deweb/sty.css
@@ -1,1 +1,116 @@
-header {background-color: rgb(0, 0, 0);}
+.container {
+    position: relative;
+
+}
+
+.caja{
+    width: 180px;
+    height: 180px;
+    color: #FFF;
+    text-align: center;
+    line-height: 180px;
+    margin: 15px;
+    float: left;
+    font-size: 18px;
+    font-family: Arial;
+    }
+    .caja1{
+    background-color: #C0392B;
+    -webkit-transition: 1s linear;
+    transition: 1s linear;
+    }
+    .caja1:hover{
+    -webkit-transform: scale(.5);
+    transform: scale(.5);
+    }
+    .caja2{
+    background-color: #9B59B6;
+    -webkit-transition: 1s linear;
+    transition: 1s linear;
+    }
+    .caja2:hover{
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+        }
+        .caja3{
+        -webkit-transition: 1s linear;
+        transition: 1s linear;
+        background-color: #2980B9;
+        }
+        .caja3:hover{
+        -webkit-transform: translate(10%);
+        transform: translate(10%);
+        }
+        .caja4{
+        background-color: #3498DB;
+        -webkit-transition: 1s linear;
+        transition: 1s linear;
+        }
+        .caja4:hover{
+        -webkit-transform: skew(10deg);
+        transform: skew(10deg);
+        }
+        .caja5{
+        background-color: #17A589;
+        -webkit-transition: 1s linear;
+        transition: 1s linear;
+        }
+        .caja5:hover{
+            -webkit-transform: skewY(10deg);
+            transform: skewY(10deg);
+            }
+            .caja6{
+            background-color: #F1C40F;
+            -webkit-transition: 1s linear;
+            transition: 1s linear;
+            }
+            .caja6:hover{
+            -webkit-transform: skewX(-5deg);
+            transform: skewX(-5deg);
+            }
+            .caja7{
+            -webkit-transition: 1s linear;
+            transition: 1s linear;
+            background-color: #E67E22;
+            }
+            .caja7:hover{
+            -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+            }
+            .caja8{
+            -webkit-transition: 1s linear;
+            transition: 1s linear;
+            background-color: #95A5A6;
+            }
+            .caja8:hover{
+                -webkit-transform: translateY(20px);
+                transform: translateY(20px);
+                }
+                .caja9{
+                -webkit-transition: 1s linear;
+                transition: 1s linear;
+                background-color: #2C3E50;
+                }
+                .caja9:hover{
+                -webkit-transform: perspective(1px) rotateX(45deg);
+                transform: perspective(1px) rotateX(45deg);
+                }
+                .caja10{
+                -webkit-transition: 1s linear;
+                transition: 1s linear;
+                background-color: grey;
+                }
+                .caja10:hover{
+                -webkit-transform: perspective(1px) rotateY(45deg);
+                transform: perspective(1px) rotateY(45deg);
+                }
+                .caja11{
+                -webkit-transition: 1s linear;
+                transition: 1s linear;
+                background-color: black;
+                }
+                .caja11:hover{
+                -webkit-transform: matrix(0.5, 0.1, 0.5,1,10, -2);
+                transform: matrix(0.5, 0.1, 0.5, 1, 10, -2);
+
+                }
