--- a/proyect/estilos.css
+++ b/proyect/estilos.css
@@ -1,3 +1,45 @@
+
+.container{
+    position: relative;
+    width: 100%;
+    height: 200px;
+
+    padding-top: 60px;
+    display: inline-block;
+    text-align: center;
+
+
+
+}
+.container img{
+    width: 100%;
+    height: 200px;
+
+}
+.encima{
+    position: absolute;
+    top: 100px;
+    left: 100px;
+}
+.columna1{
+    width: 70px;
+    height: 100%;
+    background-color: #593600 ;
+    position:fixed;
+    top: 70px;
+    left: 0px;
+
+}
+.columna2{
+    width: 70px;
+    height: 100%;
+    background-color: #593600 ;
+    position:fixed;
+    top: 70px;
+    right: 0px;
+
+}
+
 header{
     width: 100%;
     height: 70px;
@@ -11,9 +53,11 @@ nav{
     max-width: 1024px;
     margin: 0 auto;
     }
-header img{
+
+header a img{
     padding: 18px 10px;
     }
+
 nav ul{
     float: right;
     list-style: none;
@@ -26,8 +70,9 @@ nav li{
     display: inline;
     }
 nav li a{
+        color: #000000;
         font-size: 1em;
-        text-decoration: none;
+        text-decoration:none;
         line-height: 70px;
         padding: 15px 10px;
         }
@@ -37,7 +82,7 @@ nav li a:hover{
         }
 
 footer{
-text-align: center;
+text-align:center;
 color: #000000;
 background-color: #03A500;
 width: 100%;
@@ -47,12 +92,21 @@ left: 0px;
 border-top-style: solid;
 border-top-color: #73EDFF;
 }
+
 footer button{
     position:fixed;
-bottom:30px;
-left: 20px;
-
+    bottom:50px;
+    left: 50px;
+    border: 3px solid;
+    border-radius: 5px;
+    border-color: #000000;
     }
+    footer > img{
+        position:fixed;
+        bottom:0px;
+        left: 40px;
+
+        }
     footer ul{
         float: fixed;
         list-style: none;
@@ -64,3 +118,48 @@ left: 20px;
         list-style-type: none;
         display: inline;
         }
+section{
+    height: 1000px;
+}
+        section > h1{
+            text-align: center;
+        }
+        section  h2{
+            text-align: center;
+            font-size: 2em;
+        }
+        .primero{
+            margin-left: 100px;
+            margin-top: 100px;
+
+        }
+        .hh1 {
+            margin-left: 25%;
+        }
+p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    right: 200px;
+    font-size: 0.7em;
+
+}
+.segundo{
+    margin-right: 100px;
+    margin-left: 10%;
+}
+.tercero{
+    margin-left: 200px;
+    margin-top: 100px;
+}
+.hh12 {
+    margin-right: 100px;
+    margin-left: 25%;
+}
+ .img1{
+    margin-left: 100px;
+
+ }
+ .img2{
+    margin-left: 100px;
+    margin-top: 100px;
+
+ }
