--- a/proyect/estilos1.css
+++ b/proyect/estilos1.css
@@ -19,8 +19,7 @@
 .encima{
     position: absolute;
     top: 100px;
-    bottom: 100px;
-    left: 15%;
+    left: 100px;
 }
 .columna1{
     width: 70px;
@@ -70,7 +69,7 @@ nav li{
     list-style-type: none;
     display: inline;
     }
-    nav li a{
+nav li a{
         color: #000000;
         font-size: 1em;
         text-decoration:none;
@@ -79,7 +78,7 @@ nav li{
         }
 nav li a:hover{
         color: black;
-        background-color: #593600;
+        background-color: #D0D0D0;
         }
 
 footer{
@@ -91,10 +90,10 @@ position:fixed;
 bottom:0px;
 left: 0px;
 border-top-style: solid;
-border-top-color: #593600;
+border-top-color: #73EDFF;
 }
 
-footer input{
+footer button{
     position:fixed;
     bottom:50px;
     left: 50px;
@@ -148,10 +147,8 @@ p {
     margin-left: 10%;
 }
 .tercero{
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-left: 200px;
     margin-top: 100px;
-    margin-bottom: 100px;
 }
 .hh12 {
     margin-right: 100px;
@@ -164,40 +161,5 @@ p {
  .img2{
     margin-left: 100px;
     margin-top: 100px;
- }
- .nosotros1{
-width: 50%;
-float: left;
-    margin-left: 100px;
-    margin-top: 100px;
- }
- .hhn1 {
-    color:#888888;
-    margin-left: 15%;
-}
-.pn1{
-    font-size: 2em;
-    font-weight: bold;
-}
-.nosotros2{
-    width: 30%;
-float: right;
-margin-top: 100px;
-margin-right: 70px;
- }
- .nosotros3{
-    clear: both;
-        margin-top: 100px;
-
- }
- .lista1{
-    width: 10%;
-    margin-left: 100px;
-    text-align: center;
- }
- .lista{
-    width: 10%;
-    float: right;
- text-align: center;
 
  }
