--- a/proyect/estilos.css
+++ b/proyect/estilos.css
@@ -165,39 +165,53 @@ p {
     margin-left: 100px;
     margin-top: 100px;
  }
- .nosotros1{
-width: 50%;
-float: left;
-    margin-left: 100px;
-    margin-top: 100px;
- }
- .hhn1 {
-    color:#888888;
-    margin-left: 15%;
-}
-.pn1{
-    font-size: 2em;
-    font-weight: bold;
-}
-.nosotros2{
-    width: 30%;
-float: right;
-margin-top: 100px;
-margin-right: 70px;
- }
- .nosotros3{
-    clear: both;
-        margin-top: 100px;
 
- }
- .lista1{
-    width: 10%;
-    margin-left: 100px;
-    text-align: center;
- }
- .lista{
-    width: 10%;
-    float: right;
- text-align: center;
+     .hhn1 {
+        color:#888888;
+        margin-left: 15%;
+    }
+    .pn1{
+        font-size: 2em;
+        font-weight: bold;
+    }
+    .nosotros1{
 
- }
+        display:inline-block;
+
+        width: 50%;
+
+            margin-left: 25%;
+            margin-top: 50px;
+         }
+    .nosotros2{
+        width: 30%;
+
+        display:inline-block;
+
+    margin-top: 50px;
+    margin-right: 15%;
+     }
+     .nosotros3{
+        width: 30%;
+text-align: center;
+        display:inline-block;
+        margin-left: 100px;
+    margin-top: 50px;
+    margin-right: 70px;
+     }
+     .nosotros4{
+        width: 30%;
+        text-align: center;
+        display:inline-block;
+margin-right: 100px;
+    margin-top: 50px;
+
+     }
+
+
+
+    .noso{
+        display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
