--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
@@ -518,3 +518,37 @@ margin: 1em;
 
 
 }
+/*
+Aqui empieza el lightbox
+
+*/
+
+
+.lightbox{
+
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: white;
+z-index: 2;
+align-items: center;
+display: none;
+}
+.lightbox.activo{
+    display: flex;
+}
+ .lightbox .cerrar{
+    width: 4em;
+    height: 3em;
+    background-color: orange;
+
+ }
+  .lightbox .grandelight{
+
+    width: 80vh;
+    height: 80vh;
+    background-color: rgb(0, 0, 0);
+
+  }
