--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
@@ -475,17 +475,19 @@ Aqui empieza el carrousel
     justify-content: flex-start;
     align-items: center;
     transition: all .5 ease;
-    transform: translateX(-75%);
+    transform: translateX(0%);
 
 }
 .carrou .imgcarrou{
     width: calc( 100% / 4);
-    opacity: 0;
+
 
 
 }
-.carrou .imgcarrouactiva{
+.carrou .imgcarrou.activa{
     width: calc( 100% / 4);
+    opacity: 0;
+
 
 
 
@@ -508,7 +510,7 @@ height: 1em;
 background-color: rgb(68, 68, 68);
 margin: 1em;
 }
-.carrou .puntoactivo{
+.carrou .punto.activo{
     border-radius: 50% 20% / 10% 40%;
     background-color: #ac3f00;
     width: 1em;
@@ -528,10 +530,10 @@ Aqui empieza el lightbox
 
 position: fixed;
 top: 0;
-left: 0;
+left: 200;
 width: 100%;
 height: 100%;
-background-color: white;
+
 z-index: 2;
 align-items: center;
 display: none;
@@ -550,5 +552,44 @@ display: none;
     width: 80vh;
     height: 80vh;
     background-color: rgb(0, 0, 0);
+
+  }
+  /*
+  Acordeon
+  */
+
+.sec{
+    width: 100%;
+    display: flex;
+
+  justify-content: center;
+}
+
+  .acordeon{
+    justify-content: flex-start;
+    max-width: 120em;
+    width: 75%;
+
+padding: 2em;
+  }
+
+  .acordeon .bloque{
+    margin: 0 0 1em;
+    padding: 1em;
+
+
+  }
+  .acordeon .h2{
+    background-color: #a1a1a1;
+  }
+  .acordeon .contenido{
+
+    height: 0;
+    padding: 0em;
+    overflow: hidden;
+
+  }
+  .acordeon .bloque.activoo .contenido{
+    height: 40em;
 
   }
