--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
@@ -52,20 +52,18 @@ justify-content: center;
 
 }
 
-header {
+
+
+header nav{
     width: 100%;
     height: 70px;
-    background-color: #925900;
+    background-color: #b67000;
     position: fixed;
     top: 0px;
     left: 0px;
     z-index: 2;
 }
 
-nav {
-    max-width: 1024px;
-    margin: 0 auto;
-}
 
 header img {
 	float:left;
@@ -85,9 +83,11 @@ nav ul {
 nav li {
     list-style-type: none;
     display: inline;
+    position: relative;
 }
 
 nav li a {
+    font-weight: 600;
     color: #000000;
     font-size: 1em;
     text-decoration: none;
@@ -97,7 +97,7 @@ nav li a {
 
 nav li a:hover {
     color: black;
-    background-color: #593600;
+    background-color: #eb8d00;
 }
 
 footer {
@@ -151,7 +151,7 @@ section>h1 {
 
 section h2 {
     text-align: center;
-    font-size: 2em;
+
 }
 
 .primero {
