--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/css/estilos.css
@@ -57,7 +57,7 @@ justify-content: center;
 header nav{
     width: 100%;
     height: 70px;
-    background-color: #b67000;
+    background-color: #D88200;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -96,14 +96,14 @@ nav li a {
 }
 
 nav li a:hover {
-    color: black;
+    color: #000000;
     background-color: #eb8d00;
 }
 
 footer {
     text-align: center;
     color: #000000;
-    background-color: #03A500;
+    background-color: #03B300;
     width: 100%;
     position: fixed;
     bottom: 0px;
@@ -141,9 +141,7 @@ footer li {
     display: inline;
 }
 
-section {
-    height: 1000px;
-}
+
 
 section>h1 {
     text-align: center;
@@ -154,11 +152,7 @@ section h2 {
 
 }
 
-.primero {
-    margin-left: 70px;
-    margin-top: 100px;
 
-}
 
 .hh1 {
     margin-left: 25%;
@@ -171,18 +165,25 @@ p {
 
 }
 
+.sec2 {
+    margin-bottom: 200px;
+}
+
+.adopta {
+    margin-bottom: 100px;
+    margin-right: 70px;
+}
+
+.tercero {
+    display: table;
+}
+
 .segundo {
     margin-right: 100px;
     margin-left: 10%;
 }
 
-.tercero {
-    margin-right: 100px;
-    margin-left: 100px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    padding-bottom: 200px;
-}
+
 
 .hh12 {
     text-align: center;
@@ -190,7 +191,7 @@ p {
 
 
 .hhn1 {
-    color: #888888;
+    color: #5B4C4C;
     margin-left: 15%;
 }
 
@@ -550,6 +551,7 @@ display: none;
   */
 
 .sec{
+    margin-bottom: 100px;
     width: 100%;
     display: flex;
 
@@ -581,7 +583,7 @@ padding: 2em;
 
   }
   .acordeon .bloque.activoo .contenido{
-    height: 40em;
+    display: table;
 
   }
 
